src/style.css
/* Global rules */
body{
  font-family: 'Oxygen', sans-serif;
}


._synteny-dotplot-builder {
	width: 100%;
	height: 45%;
}


svg text {
    -webkit-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
                 cursor: default;
}

svg text::selection {
    background: none;
}

/* Brushes */
._synteny-dotplot-builder .extent {
  fill: grey;
  opacity: .2;
}
/* axes */
._synteny-dotplot-builder .domain {
  fill: none;
  stroke: black;
}

/* Borders and background */
._synteny-dotplot-builder .dotplot,
._synteny-dotplot-builder #histogram-and-top-form,
._synteny-dotplot-builder #form-wrapper,
.secondRow #dimReductionPlot,
.secondRow #heatmap {
  /* background-color: #F5F5F5;*/
  border: 1px solid #119911;
  border-radius: 0px;
  box-sizing: border-box;
}

/* Dot plot */

/* The float and position properties here are black magic to get the
 * canvas and svg to sit on top of each other. */
._synteny-dotplot-builder .dotplot {
  float: left;
  position: relative;
}
._synteny-dotplot-builder .dotplot:not(#dotplot) {
  float: left;
  position: absolute;
}

._synteny-dotplot-builder #dotplot {
  width: 44%;
  height: 100%;
}




.secondRow{
  clear: both;
}

.secondRow #dimReductionPlot {
  background-color: #eee;
  width: 31.5%;
  height: 45%;
  float: left;
}

#dimReductionPlot .label{
  pointer-events: none;
}

.secondRow #heatmap {
  background-color: #eef;
  width: 44%;
  height: 45%;
  float: left;
}



/* brush */
#heatmap .extent{
  fill: white;
  fill-opacity: 0.1;

  stroke: orange;
  stroke-width: 2;
  stroke-opacity: 1;
}

#dimReductionPlot .extent{
  fill: grey;
  opacity: .2;
}







/* chromosome boundary lines in dotplot */
._synteny-dotplot-builder #dotplot .tick line {
  stroke: rgba(0,0,0, 0.25);
}

/* chromosome boundary lines in dotplot */
._synteny-dotplot-builder #dotplot .tick text {
  font-family: monospace;
}


/* Histograms */
._synteny-dotplot-builder .histogram-button-wrapper {
	width: 80%;
	margin-left: 10%
}

._synteny-dotplot-builder .histogram-button {
	position: relative;
  float: left;
	width: 10%;
	color: grey;
}
._synteny-dotplot-builder #histogram-button-title {
	position: relative;
  float: left;
	width: 80%;
  text-align: center;
}

._synteny-dotplot-builder .hidden {
    display: none;
}

._synteny-dotplot-builder .pressed {
	color: black;
}

._synteny-dotplot-builder #histogram-and-top-form {
  float: left;
  width: 31.5%;
  height: 100%;
}
._synteny-dotplot-builder #histogram-wrapper {
  float: right;
  width: 100%;
  height: 90%;
}
._synteny-dotplot-builder .histogram {
  position: relative;
  width: 100%;
  height: 100%;
}
._synteny-dotplot-builder .histogram .histogram-title {
  font-size: 14pt;
}
/* axis ticks for histograms */
._synteny-dotplot-builder .histogram .tick line {
  stroke: grey;
}


/* Forms */

._synteny-dotplot-builder #form-wrapper {
  margin-top: 0;
  position: absolute;
  right: 1%;
  width: 22.5%;
  height: auto;
  font-size: 12pt;
}
._synteny-dotplot-builder #form-wrapper-top {
  float: right;
  width: 100%;
  height: 10%;
  font-size: 14pt;
}

#form-wrapper p.option-title{
  margin-left: 1.5rem;
  margin-top: 0;
  margin-bottom: 0;
}

#form-wrapper div.form-check{
  padding-left: 4rem;
}

#form-wrapper #persistence{
  margin-left: 2.75rem;
}



#histogram-button-left,
#histogram-button-right,
#histogram-button-title {
  margin-top: 2%;
}

#form-wrapper strong,
#form-wrapper text,
#gevo-link,
#gevo-link-xname,
#gevo-link-yname {
  margin-left: 2%;
}

#gevo-link {
  margin-bottom: 2%;
}
#form-top-label {
  margin-top: 2%;
}

.axis path,
.axis line {
  fill: none;
  stroke: slategray;
  shape-rendering: crispEdges;
}
    

